5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1664_1392.log
== TEST (2019-04-16 10:52:39) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + 3.50
if(comsumo>10):
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(comsumo>10):
NameError: name 'comsumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:53:02) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + 3.50
if(consumo>10):
	print(y)
else:
	print(x)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:53:15) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + 3.50
if(consumo>10):
	print(x)
else:
	print(y)
-- OUTPUT:
33.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:53:37) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + 3.50
if(consumo>10):
	print(y)
else:
	print(x)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:54:25) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + (3.50*11)
if(consumo>10):
	print(y)
else:
	print(x)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:54:32) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + (3.50*11)
if(consumo>10):
	print(y)
else:
	print(x)
-- EXECUTION TIME:
0.146825
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
33
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
68.5
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
68.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:54:35) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + (3.50*11)
if(consumo>10):
	print(y)
else:
	print(x)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:54:49) 
-- CODE:
consumo = float(input("agua:"))
x = 30 + 3
y = 30 + (3.50*11)
if(consumo>10):
	print(y)
else:
	print(x)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
